tests/spec/compile-fail/096_match_mut_requires_writable.zn
// category: compile-fail
// profile: freestanding
// purpose: match mut requires a writable enum owner

module tests.fail.matchMutRequiresWritable;

enum State {
    Ready(Job),
    Done,
}

struct Job {
    priority: U32,
}

impl Job {
    destroy {}
}

fn bad() -> U32 {
    val state = State.Ready(Job { priority: 1 });
    match mut state { // expected-error: match mut requires writable enum owner
        Ready(job) => {
            job.priority = 2;
            return job.priority;
        },
        Done => {
            return 0;
        },
    };
}
